# external

./: stack.xml
socp/: CMakeLists.txt  mainpage.dox  manifest.xml
socp/include/: armadillo_socp.h  socp.h
socp/src/: armadillo_example.cc  armadillo_socp.cc  example.c  radio_example.cc  radio_example2.cc  socp.c
